--- a/user/templates/password_reset_confirm.html
+++ b/user/templates/password_reset_confirm.html
@@ -6,6 +6,9 @@
 
 {% block content %}
     {% if validlink %}
+        {% if back %}
+            <a class="btn btn-default" href="{% url 'user_profile' %}">< Back</a>
+        {% endif %}
         <h1>Change password</h1>
         <form action="" method="post" class="form form-horizontal">
             {% csrf_token %}
