--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -128,7 +128,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if request.user.is_authenticated %}
                        <li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ request.user.get_first_name }} <span class="caret"></span></a>
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ request.user.email }} <span class="caret"></span></a>
                           <ul class="dropdown-menu">
                             <li><a href="{% url 'user_profile' %}"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
                             <li role="separator" class="divider"></li>
