--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -324,6 +324,11 @@ img {
     cursor: pointer;
 }
 
+hr {
+    margin-top: 0px;
+}
+
+
 @media (max-width: 1000px) {
     .navbar-header {
         float: none;
