--- a/baggage/templates/include/baggage_tab.html
+++ b/baggage/templates/include/baggage_tab.html
@@ -1,4 +1,4 @@
-{% if request.user.is_volunteer or request.user.is_organizer %}
+{% if request.user.is_volunteer_accepted or request.user.is_organizer %}
     <li class="{% if 'baggage' in request.build_absolute_uri %}active{% endif %}"><a href="{% url 'baggage_search' %}">Baggage</a></li>
 {% elif request.user.email_verified %}
     <li class="{% if 'baggage' in request.build_absolute_uri %}active{% endif %}"><a href="{% url 'baggage_currenthacker' %}">Baggage</a></li>
