--- a/judging/templates/include/judging_tab.html
+++ b/judging/templates/include/judging_tab.html
@@ -1,5 +1,5 @@
 {% if request.user.is_organizer and h_judging %}
-<li><a href="{% url 'import_projects' %}">Judging</a></li>
+  <li class="{% if 'judging' in request.build_absolute_uri %}active{% endif %}"><a href="{% url 'import_projects' %}">Judging</a></li>
 {% elif h_judging %}
-  <li><a href="{% url 'judge_projects' %}">Judging</a></li>
+  <li class="{% if 'judging' in request.build_absolute_uri %}active{% endif %}"><a href="{% url 'judge_projects' %}">Judging</a></li>
 {% endif %}
