--- a/meals/templates/include/meals_tab.html
+++ b/meals/templates/include/meals_tab.html
@@ -1,3 +1,3 @@
-{% if request.user.is_organizer or request.user.is_volunteer %}
+{% if request.user.is_organizer or request.user.is_volunteer_accepted %}
     <li class="{% if 'meals' in request.build_absolute_uri %}active{% endif %}"><a href="{% url 'meals_list' %}" >Meals</a></li>
 {% endif %}
