Discord connection started

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -140,6 +140,10 @@ div.panel-body form {
     margin-bottom: 0;
 }
 
+.margin-bottom {
+    margin-bottom: 10px;
+}
+
 .margin-top-adjusted {
     margin-top: 0;
     margin-bottom: 0;
