--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -20,7 +20,7 @@
         {% for field in form %}
             {% bootstrap_field field %}
         {% endfor %}
-        <button class="btn-block btn btn-success">Update Profile</button>
+        <button class="btn-block btn btn-success margin-bottom">Update Profile</button>
     </form>
     <h2>Delete account</h2>
     <hr>
