fixed style mail

--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -8,7 +8,7 @@
     <title>{{ subject }}</title>
     <style type="text/css">
 	a {
-	    color: hsl(71, 38%, 48%);
+	    color: hsl(225, 35%, 78%);
 	    text-decoration: none;
 	    -webkit-transition: all .1s linear;
 	    -moz-transition: all .1s linear;
@@ -17,7 +17,7 @@
 	}
 
 	a:hover, a:active, a:focus {
-	    color: hsl(71, 38%, 48%);
+	    color: hsl(224, 35%, 38%);
 	    text-decoration: none;
 	}
 
@@ -103,18 +103,18 @@
             }
 
             .btn-primary table td:hover {
-                background-color: hsl(71, 38%, 48%) !important;
+                background-color: hsl(224, 35%, 38%) !important;
             }
 
             .btn-primary a:hover {
-                background-color: hsl(71, 38%, 48%) !important;
-                border-color: hsl(71, 38%, 48%) !important;
+                background-color: hsl(224, 35%, 38%) !important;
+                border-color: hsl(224, 35%, 38%) !important;
             }
         }
     </style>
 </head>
 <body class=""
-      style="background-color:#f6f6f6;font-family:sans-serif;-webkit-font-smoothing:antialiased;font-size:14px;line-height:1.4;margin:0;padding:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+      style="background-color:#181C19;font-family:sans-serif;-webkit-font-smoothing:antialiased;font-size:14px;line-height:1.4;margin:0;padding:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 <table border="0" cellpadding="0" cellspacing="0" class="body"
        style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background-color:#f6f6f6;width:100%;">
     <tr>
