--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -23,7 +23,7 @@
                 {% if h_app_timeleft and not is_sponsor %}
                     <div class="alert alert-info">
                         <p> Time until applications close: <strong
-                                class="text-info">{% include 'include/deadline_countdown.html' %}</strong></p>
+                                >{% include 'include/deadline_countdown.html' %}</strong></p>
                     </div>
                 {% endif %}
                 {% include 'include/application_form.html' %}
