--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -173,7 +173,7 @@
                     </button>
                 {% endif %}
                 {% if h_blacklist_enabled %}
-                    <button name="set_blacklist" class="btn btn-warning btn-block" value="set_blacklist">
+                    <button name="set_blacklist" class="btn btn-danger btn-block" value="set_blacklist">
                         Blacklist Application
                     </button>
                 {% endif %}
