--- a/app/static/css/tabs.css
+++ b/app/static/css/tabs.css
@@ -1,17 +1,17 @@
 .nav-tabs > li > a {
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
-    /*border-radius: 0;*/
-    /*background: #C2BEBE;*/
+    border-radius: 0;
+    background: #333333;
     box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1);
     margin: 0;
     font-style: normal;
     line-height: normal;
     z-index: -1;
     font-size: 15px;
-    /*color: black;*/
-    /*border: 1px solid #838383;*/
-    /*border-bottom: 0;*/
+    color: #EEEEEE;
+    border: 1px solid #555555;
+    border-bottom: 0;
     -webkit-transition: all .1s linear;
     -moz-transition: all .1s linear;
     -o-transition: all .1s linear;
@@ -20,25 +20,25 @@
 }
 
 .nav-tabs > li > a:hover {
-    /*-webkit-border-radius: 0;*/
-    /*-moz-border-radius: 0;*/
-    /*border-radius: 0;*/
-    /*background: #d4d1d1;*/
-    /*border: 1px solid #838383;*/
-    /*border-bottom: 0;*/
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    background: #333333;
+    border: 1px solid #838383;
+    border-bottom: 0;
 }
 
 .nav-tabs {
-    /*border: 0;*/
-    /*margin: 0;*/
+    border: 0;
+    margin: 0;
 }
 
 .nav-tabs > li.active_tab > a {
-    /*box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);*/
-    /*color: black;*/
-    /*border-left: none !important;*/
-    /*border-right: none !important;*/
-    /*border-top: none !important;*/
+    box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);
+    color: #EEEEEE;
+    border-left: none !important;
+    border-right: none !important;
+    border-top: none !important;
     padding-bottom: 10px;
     padding-top: 10px;
 }
@@ -65,21 +65,21 @@
     }
 
     .nav-tabs > li.active_tab > a {
-    /*box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);*/
-    /*color: black;*/
-    /*border-left: none !important;*/
-    /*border-right: none !important;*/
-    /*border-top: none !important;*/
+    box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);
+    color: #EEEEEE;
+    border-left: none !important;
+    border-right: none !important;
+    border-top: none !important;
     padding-bottom: 9px;
     padding-top: 9px;
 }
 }
 
-/*.active_tab {*/
-/*    background-color: white;*/
-/*}*/
+.active_tab {
+    background-color: #222222;
+}
 
-/*.active_tab > a {*/
-/*    background: none !important;*/
-/*    box-shadow: none !important;*/
-/*}*/
+.active_tab > a {
+    background: none !important;
+    box-shadow: none !important;
+}
