--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -114,9 +114,9 @@
     </style>
 </head>
 <body class=""
-      style="background-color:#181C19;font-family:sans-serif;-webkit-font-smoothing:antialiased;font-size:14px;line-height:1.4;margin:0;padding:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+      style="background-color:#111111;font-family:sans-serif;-webkit-font-smoothing:antialiased;font-size:14px;line-height:1.4;margin:0;padding:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 <table border="0" cellpadding="0" cellspacing="0" class="body"
-       style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background-color:#f6f6f6;width:100%;">
+       style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background-color:#111111;width:100%;">
     <tr>
         <td style="font-family:sans-serif;font-size:14px;vertical-align:top;">&nbsp;</td>
         <td class="container"
@@ -135,7 +135,7 @@
                     {% endblock %}</span>
                 {% block main %}
                     <table class="main"
-                           style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background:#fff;border-radius:3px;width:100%;">
+                           style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;border-radius:3px;width:100%;background-color: #222222; color: #EEEEEE">
                         <!-- START MAIN CONTENT AREA -->
                         <tr>
                             <td class="wrapper"
