Revert "chore: Update favicon"

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,18 +12,15 @@
 
     <!--FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/svg+xml" href="{% static 'img/favicon.svg' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
     <link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg' %}" color="#5f723f">
+    <link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico' %}">
     <meta name="apple-mobile-web-app-title" content="My HackUPC">
-    <meta name="application-name" content="My HackUPC">
+	<meta name="application-name" content="My HackUPC">
     <meta name="msapplication-TileColor" content="#f8f8f8">
     <meta name="msapplication-config" content="{% static 'img/favicon/browserconfig.xml' %}">
-    <!-- Don't reference favicon.ico or the favicon.svg wont load. -->
-    <!-- If favicon.ico is in the root, browsers will find it anyways, so dont worry -->
-    <!-- <link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico' %}"> -->
 
 
     <!--FACEBOOK DESCRIPTION -->
