fixed copy emails

--- a/organizers/templates/applications_list.html
+++ b/organizers/templates/applications_list.html
@@ -22,7 +22,7 @@
     {% elif otherApplication and emailCopy %}
       <div style="padding-top: 15px;">
         <div class="col-md-8">
-          <input class="form-control" id='copy' type="text" value={{ emails }}/>
+          <input class="form-control" id='copy' type="text" value="{{ emails }}"/>
         </div>
         <div class="col-md-4">
           <a onclick="copy_mails()" style="margin: 0px" class="btn-block btn btn-info">Copy mails</a>
