--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -1,6 +1,5 @@
-{% load bootstrap3 %}
 {% load static %}
-{% load form_utils %}
+{#{% load form_utils %}#}
 <style>
     #id_under_age > div, #id_tshirt_size > div, #id_graduation_year > div, #id_team > div, #id_first_timer > div,
     #id_scholarship > div, #id_reimb > div, #id_first_time_volunteer > div, #id_which_hack > div, #id_attendance > div,
@@ -17,19 +16,7 @@
 </style>
 <form class="signup " enctype="multipart/form-data" id="signup_form" method="post" action="">
     {% csrf_token %}
-    {% bootstrap_form_errors form %}
-    {% for fieldset in form.fieldsets %}
-        <fieldset>
-            <h3>{{ fieldset.name }}<small style="color: darkgray; font-style: italic;" class="pull-right saved-string"></small><br>
-                {% if fieldset.description %}
-                    <small>{{ fieldset.description }}</small>
-                {% endif %}
-            </h3>
-            {% for field in fieldset %}
-                {% bootstrap_field field %}
-            {% endfor %}
-        </fieldset>
-    {% endfor %}
+    {% include 'include/bootstrap_form.html' %}
     <small><span style="color: red">*</span>Indicates required field</small>
     {% if not application or application.can_be_edit %}
         <button class="btn btn-success btn-block" type="submit">{% if application %}Update application{% else %}
