--- a/reimbursement/templates/include/reimbursement_form.html
+++ b/reimbursement/templates/include/reimbursement_form.html
@@ -1,21 +1,7 @@
-{% load bootstrap3 %}
 {% load static %}
-{% load form_utils %}
 <form class="signup " enctype="multipart/form-data" id="signup_form" method="post" action="">
     {% csrf_token %}
-    {% bootstrap_form_errors form %}
-    {% for fieldset in form.fieldsets %}
-        <fieldset>
-            <h3>{{ fieldset.name }}<br>
-                {% if fieldset.description %}
-                    <small>{{ fieldset.description }}</small>
-                {% endif %}
-            </h3>
-            {% for field in fieldset %}
-                {% bootstrap_field field %}
-            {% endfor %}
-        </fieldset>
-    {% endfor %}
+    {% include 'include/bootstrap_form.html' %}
     <small><span style="color: red">*</span>Indicates required field</small>
 
     <button class="btn btn-success btn-block" type="submit">Submit receipt</button>
