--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -8,9 +8,15 @@
 
     <h1>Sign in</h1>
 
-    <form action="" method="post" class="form ">
+    <form action="" method="post" class="form " id="loginForm">
         {% csrf_token %}
-        {% bootstrap_form form %}
+        {% bootstrap_form_errors form %}
+        {% if form.email %}
+            {% bootstrap_field form.email %}
+        {% else %}
+            {% bootstrap_field form.username label='Email' %}
+        {% endif %}
+        {% bootstrap_field form.password label='Password' %}
 
         <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
 
