--- a/user/templates/login_cas_done.html
+++ b/user/templates/login_cas_done.html
@@ -2,6 +2,11 @@
 {% load static %}
 {% load i18n %}
 {% block title %}Login | {% endblock %}
+{% block navbar %}
+  {% with cas='True' %}
+    {{ block.super }}
+  {% endwith %}
+{% endblock %}
 {% block content %}
       <h1 style="text-align: center">Sign in</h1>
       {% for message in messages %}
