--- a/user/templates/login_cas.html
+++ b/user/templates/login_cas.html
@@ -7,6 +7,7 @@
 {% block extra_scripts %}
   <script>
     $('document').ready(function(){
+      $('input#id_warn').parents('.form-group').hide()
       $('input#id_username')[0].placeholder = '';
       $('input#id_password')[0].placeholder = '';
 
