--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -27,6 +27,7 @@
                 {% include 'include/field.html' with desc='Name' value=app.user.name %}
                 {% include 'include/field.html' with desc='Submitted' value=app.submission_date|naturaltime %}
                 {% include 'include/field.html' with desc='Country' value=app.origin_country %}
+                {% include 'include/field.html' with desc='Online?' value=app.online|yesno:'Yes,No,Maybe' %}
                 {% if not vote %}
                     {% include 'include/field.html' with desc='Status' value=app.get_status_display %}
                     {% include 'include/field.html' with desc='Email' value=app.user.email %}
