--- a/app/templates/include/bootstrap_form.html
+++ b/app/templates/include/bootstrap_form.html
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             {% endif %}
-                <div class="col-{{ field.space }}">
+                <div class="col-md-{{ field.space }}">
                     {% bootstrap_field field.field %}
                 </div>
         {% endfor %}
