--- a/organizers/templates/applications_list.html
+++ b/organizers/templates/applications_list.html
@@ -15,11 +15,15 @@
 {% block table_footer %}
     {% if not otherApplication and user.is_director %}
         <div>
-            <a href="{% querystring '_export'='csv' %}" class="btn-block btn btn-info">Export
-                CSV</a>
+            <a href="{% querystring '_export'='csv' %}" class="btn-block btn btn-info">Export CSV</a>
             <a href="{% url 'invite_list' %}" class="btn-block btn btn-default">Send hacker invites</a>
         </div>
-    {% elif otherApplication and emailCopy %}
+    {% elif createUser %}
+      <div>
+        <a class="btn-block btn btn-info" href={% url 'sponsor_signup' %}>Create new Sponsor</a>
+      </div>
+    {% endif %}
+    {% if emails %}
       <div style="padding-top: 15px;">
         <div class="col-md-8">
           <input class="form-control" id='copy' type="text" value="{{ emails }}"/>
@@ -28,9 +32,6 @@
           <a onclick="copy_mails()" style="margin: 0px" class="btn-block btn btn-info">Copy mails</a>
         </div>
       </div>
-    {% elif createUser %}
-      <div>
-        <a class="btn-block btn btn-info" href={% url 'sponsor_signup' %}>Create new Sponsor</a>
-      </div>
     {% endif %}
+
 {% endblock %}
